objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__EshopExternalId__c</fullName>
        <externalId>true</externalId>
        <label>EshopExternalId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>